--- a/src/TFG.RulesPenaltiesF1.Web/Views/Article/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Article/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<TFG.RulesPenaltiesF1.Core.Entities.Article>
+﻿@model IEnumerable<ArticleViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Articles";
 }
 
 <h1>Index</h1>
@@ -19,17 +19,26 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+		@foreach (var item in Model)
+		{
+				<tr>
+					<td>
+					@Html.DisplayFor(modelItem => item.Content)
+					</td>
+					<td>
+						<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+						<a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+						<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+					</td>
+				</tr>
+			@if (item.SubArticles.Any())
+			{
+				<tr>
+					<td colspan="2">
+						<partial name = "_SubArticlesTree" model="item.SubArticles">
+					</td>
+				</tr>
+			}
+		}
     </tbody>
 </table>
