--- a/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Article" asp-action="Index">Articles</a>
+							<a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
 						</li>
 					</ul>
 				</div>
