Avance tests unitarios y arreglados problemas tests de aceptación

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
@@ -6,6 +6,7 @@
 {
 	@Html.LabelFor(m => m.Content)
 	@Html.TextAreaFor(m => m.Content, new {@class = "form-control"})
+	@Html.ValidationMessageFor(m => m.Content);
 
 		<h3>Subarticles</h3>
 
