Cambios en la UI

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
@@ -29,13 +29,13 @@
 				}
 			}
 		</div>
-		<button type="button" onclick="addSubArticle()" class="btn btn-primary">Add Subarticle</button>
-		<button type="button" onclick="removeSubArticle()" class="btn btn-danger">Remove Subarticle</button>
+		<button type="button" onclick="addSubArticle()" class="btn btn-primary" id="idAddSubarticle">Add Subarticle</button>
+		<button type="button" onclick="removeSubArticle()" class="btn btn-danger" id="idRemoveSubarticle">Remove Subarticle</button>
 	</div>
 
 	<div class="form-group mt-3">
-		<input type="submit" value="Create" class="btn btn-primary" />
-		<input type="reset" onclick="resetForm()" value="Reset" class="btn btn-default" />
+		<input type="submit" value="Create" class="btn btn-primary" id="submit" />
+		<input type="reset" onclick="resetForm()" value="Reset" class="btn btn-default" id="resetButton" />
 	</div>
 </form>
 
