avances hu03-reglamento, creación del esqueleto controlador, vistas y servicios

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
@@ -38,6 +38,10 @@
 		<input type="reset" onclick="resetForm()" value="Reset" class="btn btn-default" id="resetButton" />
 	</div>
 </form>
+<div>
+	<br/>
+	<a asp-action="Index">Back to List</a>
+</div>
 
 @section Scripts {
 		<script>
