--- a/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TFG.RulesPenaltiesF1.Core.Entities.Regulation>
+﻿@model IEnumerable<RegulationViewModel>
 
 @{
     ViewData["Title"] = "Index";
