--- a/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Articles</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Regulations" asp-action="Index">Regulations</a>
+						</li>
 					</ul>
 				</div>
 			</div>
