--- a/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Create.cshtml
@@ -1,7 +1,8 @@
 ﻿@model RegulationViewModel
 
 @using Microsoft.AspNetCore.Html;
-@using TFG.RulesPenaltiesF1.Web.ViewModels
+@using TFG.RulesPenaltiesF1.Web.ViewModels;
+@using TFG.RulesPenaltiesF1.Web.ViewModels.Penalties
 
 @{
     ViewData["Title"] = "Create";
@@ -28,12 +29,25 @@
 					Value = a.Id.ToString(),
 					Text =  a.ToString()
 				});
-
-				Console.WriteLine(articlesList.ToList().ToArray()[0].ToString());
 			}
 			@Html.ListBoxFor(m => m.Articles, articlesList, new { @class = "form-control", @multiple = "multiple" })
 
 			@Html.ValidationMessageFor(m => m.Articles, "", new { @class = "text-danger" })
+		</div>
+
+		<div class="form-group">
+			@Html.LabelFor(m => m.Penalties, new { @class = "control-label" })
+			@{
+
+				var penaltiesList = ((List<PenaltyViewModel>)ViewBag.Penalties).Select(a => new SelectListItem
+				{
+					Value = a.Id.ToString(),
+					Text =  a.Name + a.Description
+				});
+			}
+			@Html.ListBoxFor(m => m.Penalties, penaltiesList, new { @class = "form-control", @multiple = "multiple" })
+
+			@Html.ValidationMessageFor(m => m.Penalties, "", new { @class = "text-danger" })
 		</div>
 
         <div class="form-group">
