Avances tests aceptación

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
@@ -35,7 +35,7 @@
 
 	<div class="form-group mt-3">
 		<input type="submit" value="Create" class="btn btn-primary" id="submit" />
-		<input type="reset" onclick="resetForm()" value="Reset" class="btn btn-default" id="resetButton" />
+		<input type="reset" onclick="resetForm()" value="Reset" class="btn btn-secondary" id="resetButton" />
 	</div>
 </form>
 <div>
