--- a/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Create.cshtml
@@ -51,8 +51,9 @@
 		</div>
 
         <div class="form-group mt-3">
-            <input type="submit" value="Create" class="btn btn-primary" id="submit" />
-        </div>
+			<input type="submit" value="Create" class="btn btn-primary" id="submit" />
+			<input type="reset" onclick="resetForm()" value="Reset" class="btn btn-secondary" id="resetButton" />
+		</div>
     </form>
 </div>
 
