--- a/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Details.cshtml
@@ -10,15 +10,51 @@
     <h4>Regulation</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-1">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-2">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
+
+	<dl class="row">
+		<dt class = "col-sm-2">
+			Articles
+		</dt>
+	</dl>
+
+	<ol>
+		@foreach(var article in Model.ArticlesContent)
+		{
+			<li class="ordered">@article.Content
+			@if (article.SubArticles.Any())
+			{
+				<ol>
+					@foreach(var subarticle in article.SubArticles)
+					{
+						<li class="ordered">@subarticle.Content</li>
+					}
+				</ol>
+			}
+			</li>
+		}
+	</ol>
+
+	<dl class="row">
+		<dt class = "col-sm-2">
+			Penalties
+		</dt>
+	</dl>
+
+	<ol>
+		@foreach(var penalty in Model.PenaltiesContent)
+		{
+			<li class="ordered">@penalty.ToString()</li>
+		}
+	</ol>
+
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
