migracion cascade regulationarticle-penalty, arreglos tests y vistas

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Create.cshtml
@@ -2,6 +2,10 @@
 
 <h2>Create Article</h2>
 
+@{
+    ViewData["Title"] = "Create Article";
+}
+
 <form asp-action="Create">
 	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
