--- a/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Articles/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Articles";
 }
 
-<h1>Index</h1>
+<h1>Articles - Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
