--- a/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Create.cshtml
@@ -5,7 +5,7 @@
 @using TFG.RulesPenaltiesF1.Web.ViewModels.Penalties
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Regulation";
 }
 
 <h1>Create</h1>
