--- a/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Regulations/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<RegulationViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Regulations";
 }
 
-<h1>Index</h1>
+<h1>Regulations - Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
