--- a/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
 							<a class="nav-link text-dark" asp-area="" asp-controller="Regulations" asp-action="Index">Regulations</a>
 						</li>
 					</ul>
+					<partial name="_LoginPartial"/>
 				</div>
 			</div>
 		</nav>
