Avances registrar nueva cuenta con rol

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using TFG.RulesPenaltiesF1.Infrastructure.Identity;
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
