--- a/src/TFG.RulesPenaltiesF1.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,11 +13,18 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
 
-			<div class="form-floating">
-                <label asp-for="Input.FullName"></label>
-                <input asp-for="Input.FullName" class="form-control" />
+			<div class="form-floating mb-3">
+                <input asp-for="Input.FullName" class="form-control" autocomplete="fullname" aria-required="true" placeholder="name@example.com" />
+				<label asp-for="Input.FullName">Full Name</label>
                 <span asp-validation-for="Input.FullName" class="text-danger"></span>
             </div>
+
+			<div class="form-group mb-3">
+				<label asp-for="Input.Role" class="control-label"></label>
+				<select asp-for="Input.Role" asp-items="Model.Input.RoleList" class="form-control"></select>
+			</div>
+
+
 
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
