--- a/src/TFG.RulesPenaltiesF1.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -15,9 +15,10 @@
                 <input asp-for="Username" class="form-control" placeholder="Please choose your username." disabled />
                 <label asp-for="Username" class="form-label"></label>
             </div>
-			<div class="form-group">
-                <label asp-for="Input.FullName" class="form-control"></label>
-                <input asp-for="Input.FullName" class="form-label" />
+			<div class="form-floating mb-3">
+                <input asp-for="Input.FullName" class="form-control" placeholder=" "/>
+                <label asp-for="Input.FullName" class="form-label"></label>
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number."/>
