--- a/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Regulations" asp-action="Index">Regulations</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Circuits" asp-action="Index">Circuits</a>
+						</li>
 					</ul>
 					<partial name="_LoginPartial"/>
 				</div>
