avances listado y detalles circuitos

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CircuitViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Circuit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
