--- a/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Details.cshtml
@@ -42,22 +42,10 @@
             @Html.DisplayFor(model => model.YearFirstGP)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MillisecondsLapRecord)
+            @Html.DisplayNameFor(model => model.InfoLapRecord)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MillisecondsLapRecord)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DriverLapRecord)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DriverLapRecord)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.YearLapRecord)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.YearLapRecord)
+            @Html.DisplayFor(model => model.InfoLapRecord)
         </dd>
     </dl>
 </div>
