avances creación circuitos

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Create.cshtml
@@ -23,7 +23,7 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Length" class="control-label"></label>
+                <label asp-for="Length" class="control-label">Length (km)</label>
                 <input asp-for="Length" class="form-control" />
                 <span asp-validation-for="Length" class="text-danger"></span>
             </div>
