--- a/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Create.cshtml
@@ -37,11 +37,23 @@
                 <input asp-for="YearFirstGP" class="form-control" />
                 <span asp-validation-for="YearFirstGP" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="MillisecondsLapRecord" class="control-label"></label>
-                <input asp-for="MillisecondsLapRecord" class="form-control" />
-                <span asp-validation-for="MillisecondsLapRecord" class="text-danger"></span>
-            </div>
+
+			<h3 class="mt-3">Record Lap</h3>
+
+			<div class="form-inline">
+				<div class="form-group">
+					<label asp-for="MinutesLapRecord" class="control-label"></label>
+					<input asp-for="MinutesLapRecord" class="form-control" />
+					<span asp-validation-for="MinutesLapRecord" class="text-danger"></span>
+				</div>
+				<div class="form-group">
+					<label asp-for="SecondsLapRecord" class="control-label"></label>
+					<input asp-for="SecondsLapRecord" class="form-control" />
+					<span asp-validation-for="SecondsLapRecord" class="text-danger"></span>
+				</div>
+			</div>
+
+
             <div class="form-group">
                 <label asp-for="DriverLapRecord" class="control-label"></label>
                 <input asp-for="DriverLapRecord" class="form-control" />
@@ -52,7 +64,7 @@
                 <input asp-for="YearLapRecord" class="form-control" />
                 <span asp-validation-for="YearLapRecord" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
