--- a/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Circuits/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CircuitViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Circuits";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
