--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TFG.RulesPenaltiesF1.Core.Entities.Competitor
+﻿@model CompetitorViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -24,8 +24,8 @@
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TeamPrincipalID" class="control-label"></label>
-                <select asp-for="TeamPrincipalID" class ="form-control" asp-items="ViewBag.TeamPrincipalID"></select>
+                <label asp-for="TeamPrincipalId" class="control-label"></label>
+                <select asp-for="TeamPrincipalId" class ="form-control" asp-items="ViewBag.TeamPrincipalID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PowerUnit" class="control-label"></label>
