--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Edit.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TFG.RulesPenaltiesF1.Core.Entities.Competitor
+﻿@model CompetitorViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -24,9 +24,9 @@
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TeamPrincipalID" class="control-label"></label>
-                <select asp-for="TeamPrincipalID" class="form-control" asp-items="ViewBag.TeamPrincipalID"></select>
-                <span asp-validation-for="TeamPrincipalID" class="text-danger"></span>
+                <label asp-for="TeamPrincipalId" class="control-label"></label>
+                <select asp-for="TeamPrincipalId" class="form-control" asp-items="ViewBag.TeamPrincipalID"></select>
+                <span asp-validation-for="TeamPrincipalId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PowerUnit" class="control-label"></label>
