--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Details.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Details.cshtml
@@ -26,6 +26,9 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TeamPrincipalName)
         </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.TeamPrincipalName)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PowerUnit)
         </dt>
