--- a/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Competitors" asp-action="Index">Competitors</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Seasons" asp-action="Index">Seasons</a>
+						</li>
 					</ul>
 					<partial name="_LoginPartial"/>
 				</div>
