--- a/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SeasonViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Season";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -17,6 +17,63 @@
                 <label asp-for="Year" class="control-label"></label>
                 <input asp-for="Year" class="form-control" />
                 <span asp-validation-for="Year" class="text-danger"></span>
+            </div>
+            <div class="form-group mt-4">
+			    @Html.LabelFor(m => m.Competitors, new { @class = "control-label" })
+			    @{
+
+				    var competitorsList = ((List<CompetitorViewModel>)ViewBag.Competitors).Select(a => new SelectListItem
+				    {
+					    Value = a.Id.ToString(),
+					    Text =  a.Name
+				    });
+			    }
+			    @Html.ListBoxFor(m => m.Competitors, competitorsList, new { @class = "form-control", @multiple = "multiple" })
+
+			    @Html.ValidationMessageFor(m => m.Competitors, "", new { @class = "text-danger" })
+		    </div>
+            <div class="form-group">
+                <h5><label class="control-label">Competitions</label></h5>
+                <div id="competitions" style="margin-left:20px">
+                    @if(Model != null && Model.Competitions.Count > 0)
+                    {
+                        int n = 0;
+                        foreach(var competition in Model.Competitions)
+                        {
+                            <div class="competition">
+                                <h6>Competition @(n+1)</h6>
+                                <div class="competition" style=margin-left:20px;>
+                                    <div class="form-group">
+                                        <label asp-for="@Model.Competitions[@n].Name" class="control-label"></label>
+                                        <input type="text" asp-for="@Model.Competitions[n].Name" class="form-control">
+		                                <span asp-validation-for="@Model.Competitions[n].Name" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label asp-for="@Model.Competitions[@n].CircuitId" class="control-label"></label>
+                                        <select asp-for="@Model.Competitions[@n].CircuitId" class ="form-control" asp-items="@(new SelectList(ViewBag.Circuits, "Id", "Name"))"></select>
+                                        <span asp-validation-for="@Model.Competitions[n].CircuitId" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label asp-for="@Model.Competitions[@n].IsSprint" class="control-label"></label>
+                                        <input class="form-check-input" type="checkbox" asp-for="@Model.Competitions[n].IsSprint" class="form-control">
+		                                <span asp-validation-for="@Model.Competitions[n].IsSprint" class="text-danger"></span>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label asp-for="@Model.Competitions[@n].Week" class="control-label"></label>
+                                        <input type="number" asp-for="@Model.Competitions[n].Week" class="form-control">
+		                                <span asp-validation-for="@Model.Competitions[n].Week" class="text-danger"></span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            n++;
+                        }
+                    }
+                </div>
+                <button type="button" onclick="addCompetition()" class="btn btn-primary" id="add-competition-btn">Add Competition</button>
             </div>
             <div class="form-group">
                 <label asp-for="RegulationId" class="control-label"></label>
@@ -35,4 +92,54 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+
+        @{int nCompetitions = Model == null ? 0 : Model.Competitions.Count;}
+        var n = @nCompetitions;
+
+
+        function addCompetition() {
+
+            console.log("adding competition");
+
+            // Create a new competition form template using the current number of competitions
+            var competitionFormTemplate = `
+            <div class="competition">
+                <h6>Competition ${n + 1}</h6>
+                <div class="competition" style="margin-left: 20px;">
+                    <div class="form-group">
+                        <label for="Competitions_${n}__Name" class="control-label">Competition Name</label>
+                        <input type="text" id="Competitions_${n}__Name" name="Competitions[${n}].Name" class="form-control">
+                        <span class="text-danger" id="Competitions_${n}__Name-error" data-valmsg-for="Competitions[${n}].Name"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="Competitions_${n}__CircuitId" class="control-label">Circuit ID</label>
+                        <select id="Competitions_${n}__CircuitId" name="Competitions[${n}].CircuitId" class="form-control">
+                            @foreach (var circuit in ViewBag.Circuits)
+                            {
+                                <option value="@circuit.Id">@circuit.Name</option>
+                            }
+                        </select>
+                        <span class="text-danger" id="Competitions_${n}__CircuitId-error" data-valmsg-for="Competitions[${n}].CircuitId"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="Competitions_${n}__IsSprint" class="control-label">Is Sprint</label>
+                        <input type="checkbox" id="Competitions_${n}__IsSprint" name="Competitions[${n}].IsSprint" class="form-check-input">
+                        <span class="text-danger" id="Competitions_${n}__IsSprint-error" data-valmsg-for="Competitions[${n}].IsSprint"></span>
+                    </div>
+                    <div class="form-group">
+                        <label for="Competitions_${n}__Week" class="control-label">Week</label>
+                        <input type="number" id="Competitions_${n}__Week" name="Competitions[${n}].Week" class="form-control">
+                        <span class="text-danger" id="Competitions_${n}__Week-error" data-valmsg-for="Competitions[${n}].Week"></span>
+                    </div>
+                </div>
+            </div>
+            `;
+
+            $('#competitions').append(competitionFormTemplate);
+
+            n++;
+        }
+    </script>
 }
