--- a/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Create.cshtml
@@ -147,8 +147,8 @@
                         <span class="text-danger" id="Competitions_${n}__CircuitId-error" data-valmsg-for="Competitions[${n}].CircuitId"></span>
                     </div>
                     <div class="form-group mt-3">
-                        <label for="Competitions_${n}__IsSprint" class="control-label">Sprint Race</label>
-                        <input type="checkbox" id="Competitions_${n}__IsSprint" name="Competitions[${n}].IsSprint" class="form-check-input">
+                        <label class="control-label" for="Competitions_${n}__IsSprint">Sprint Race</label>
+                        <input class="form-check-input" type="checkbox" data-val="true" data-val-required="The Sprint Race field is required." id="Competitions_${n}__IsSprint" name="Competitions[${n}].IsSprint" value="true">
                         <span class="text-danger" id="Competitions_${n}__IsSprint-error" data-valmsg-for="Competitions[${n}].IsSprint"></span>
                     </div>
                     <div class="form-group mt-3">
