--- a/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Competitors/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<CompetitorViewModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Competitors";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Competitors - Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
