--- a/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Seasons/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<SeasonViewModel>
 
 @{
-    ViewData["Title"] = "Seasons - Index";
+    ViewData["Title"] = "Seasons";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Seasons - Index</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
