--- a/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
 						<li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Seasons" asp-action="Index">Seasons</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Drivers" asp-action="Index">Drivers</a>
+						</li>
 					</ul>
 					<partial name="_LoginPartial"/>
 				</div>
