modificación vistas y viewmodelservice pilotos

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Drivers/Index.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Drivers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TFG.RulesPenaltiesF1.Core.Entities.Driver>
+﻿@model IEnumerable<DriverViewModel>
 
 @{
     ViewData["Title"] = "Drivers";
