creación de pilotos terminada

--- a/src/TFG.RulesPenaltiesF1.Web/Views/Drivers/Create.cshtml
+++ b/src/TFG.RulesPenaltiesF1.Web/Views/Drivers/Create.cshtml
@@ -13,21 +13,21 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="DateBirth" class="control-label"></label>
-                <input asp-for="DateBirth" class="form-control" />
+                <input type="date" asp-for="DateBirth" class="form-control datepicker" />
                 <span asp-validation-for="DateBirth" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label asp-for="CompetitorId" class="control-label"></label>
                 <select asp-for="CompetitorId" class ="form-control" asp-items="ViewBag.CompetitorId"></select>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -35,9 +35,18 @@
 </div>
 
 <div>
+    <br/>
     <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script>
+        var datepicker = new bootstrap.Datepicker(document.querySelector('.datepicker'), {
+            format: 'mm/dd/yyyy',
+            startDate: '-18y',
+            endDate: 'today',
+            autoclose: true
+        });
+    </script>
 }
